--- a/second.html
+++ b/second.html
@@ -11,6 +11,6 @@
         i am a btech graduate ....
     </p>
 <h3>Go Back To First Page</h3>
-    <input type="button" value="create page" onclick="location.href='first.html'"/>
+    <input type="button" value="CLICK HERE" onclick="location.href='first.html'"/>
   
 </body>
